// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Golden files — shipped example deals > amendment_001.proviso evaluates identically 1`] = `
{
  "baskets": [],
  "covenants": [],
  "definitions": [],
}
`;

exports[`Golden files — shipped example deals > corporate_revolver.proviso evaluates identically 1`] = `
{
  "baskets": [
    {
      "available": 8500000,
      "baseCapacity": 8500000,
      "basketType": "grower",
      "capacity": 8500000,
      "floor": 5000000,
      "name": "AssetBasedBasket",
      "used": 0,
    },
    {
      "accumulated": 0,
      "available": 0,
      "basketType": "builder",
      "capacity": 0,
      "maximum": 50000000,
      "name": "AssetSaleProceeds",
      "starting": 0,
      "used": 0,
    },
    {
      "available": 20000000,
      "basketType": "fixed",
      "capacity": 20000000,
      "name": "CapEx",
      "used": 0,
    },
    {
      "available": 15000000,
      "baseCapacity": 6705000,
      "basketType": "grower",
      "capacity": 15000000,
      "floor": 15000000,
      "name": "EBITDAInvestments",
      "used": 0,
    },
    {
      "available": 25000000,
      "basketType": "fixed",
      "capacity": 25000000,
      "name": "GeneralInvestments",
      "used": 0,
    },
    {
      "available": 75000000,
      "basketType": "fixed",
      "capacity": 75000000,
      "name": "PermittedAcquisitions",
      "used": 0,
    },
    {
      "available": 17000000,
      "basketType": "fixed",
      "capacity": 17000000,
      "name": "RestrictedPayments",
      "used": 0,
    },
    {
      "accumulated": 0,
      "available": 10000000,
      "basketType": "builder",
      "capacity": 10000000,
      "maximum": 75000000,
      "name": "RetainedEarningsBasket",
      "starting": 10000000,
      "used": 0,
    },
  ],
  "covenants": [
    {
      "actual": 3.6017897091722597,
      "compliant": true,
      "headroom": 0.8982102908277403,
      "name": "MaxLeverage",
      "operator": "<=",
      "threshold": 4.5,
      "unit": "number",
    },
    {
      "actual": 5.451219512195122,
      "compliant": true,
      "headroom": 2.951219512195122,
      "name": "MinInterestCoverage",
      "operator": ">=",
      "threshold": 2.5,
      "unit": "number",
    },
    {
      "actual": 28400000,
      "compliant": true,
      "headroom": 13400000,
      "name": "MinLiquidity",
      "operator": ">=",
      "threshold": 15000000,
      "unit": "number",
    },
  ],
  "definitions": [
    {
      "name": "EBITDA",
      "value": 44700000,
    },
    {
      "name": "InterestCoverage",
      "value": 5.451219512195122,
    },
    {
      "name": "Leverage",
      "value": 3.6017897091722597,
    },
    {
      "name": "TotalDebt",
      "value": 161000000,
    },
  ],
}
`;

exports[`Golden files — shipped example deals > data_center.proviso evaluates identically 1`] = `
{
  "baskets": {
    "__error": "Undefined identifier: net_income",
  },
  "conditionsPrecedent": [
    {
      "complete": false,
      "conditions": [
        {
          "description": "Engineer's certificate of substantial completion",
          "name": "SubstantialCompletionCertificate",
          "responsible": "EngineeringConsultant",
          "satisfies": [
            "SubstantialCompletion",
          ],
          "status": "pending",
        },
        {
          "description": "Unconditional final lien waivers",
          "name": "FinalLienWaivers",
          "responsible": "GeneralContractor",
          "satisfies": [],
          "status": "pending",
        },
        {
          "description": "Successful 30-day uptime test (99.95%+)",
          "name": "UptimeTest",
          "responsible": "EngineeringConsultant",
          "satisfies": [
            "UptimeTestPassed",
          ],
          "status": "pending",
        },
        {
          "description": "Utility certification of power service",
          "name": "PowerCertificate",
          "responsible": "Utility",
          "satisfies": [
            "PowerCertification",
          ],
          "status": "pending",
        },
        {
          "description": "Mechanical completion of cooling systems",
          "name": "CoolingCertificate",
          "responsible": "MechanicalContractor",
          "satisfies": [
            "CoolingCommissioned",
          ],
          "status": "pending",
        },
        {
          "description": "Operations phase insurance coverage",
          "name": "OperationsInsurance",
          "responsible": "Borrower",
          "satisfies": [],
          "status": "pending",
        },
        {
          "description": "Anchor tenant ready for occupancy",
          "name": "TenantOccupancy",
          "responsible": "Borrower",
          "satisfies": [
            "TenantReadiness",
          ],
          "status": "pending",
        },
      ],
      "name": "COD_Funding",
      "pending": 7,
      "satisfied": 0,
      "section": "4.03",
      "totalConditions": 7,
      "waived": 0,
    },
    {
      "complete": false,
      "conditions": [
        {
          "description": "Executed Credit Agreement and all Loan Documents",
          "name": "ExecutedCreditAgreement",
          "responsible": "Agent",
          "satisfies": [],
          "status": "pending",
        },
        {
          "description": "Opinions of Borrower's Counsel and Local Counsel",
          "name": "LegalOpinions",
          "responsible": "BorrowerCounsel",
          "satisfies": [],
          "status": "pending",
        },
        {
          "description": "Evidence of Initial Equity Contribution (30%)",
          "name": "EquityContribution",
          "responsible": "Sponsor",
          "satisfies": [
            "MinEquityContribution",
          ],
          "status": "pending",
        },
        {
          "description": "Builder's Risk, GL, Umbrella, and Cyber Insurance",
          "name": "InsuranceCertificates",
          "responsible": "Borrower",
          "satisfies": [],
          "status": "pending",
        },
        {
          "description": "Executed lease with anchor tenant (min 30% capacity)",
          "name": "AnchorTenantLease",
          "responsible": "Borrower",
          "satisfies": [
            "AnchorTenantSigned",
          ],
          "status": "pending",
        },
        {
          "description": "Executed utility service agreement for 50MW",
          "name": "PowerServiceAgreement",
          "responsible": "Borrower",
          "satisfies": [],
          "status": "pending",
        },
        {
          "description": "All permits required for construction commencement",
          "name": "AllPermits",
          "responsible": "Borrower",
          "satisfies": [
            "AllPermitsSecured",
          ],
          "status": "pending",
        },
        {
          "description": "Phase I ESA",
          "name": "EnvironmentalReport",
          "responsible": "Borrower",
          "satisfies": [],
          "status": "pending",
        },
      ],
      "name": "InitialFunding",
      "pending": 8,
      "satisfied": 0,
      "section": "4.01",
      "totalConditions": 8,
      "waived": 0,
    },
    {
      "complete": false,
      "conditions": [
        {
          "description": "Applicable milestone achieved per construction schedule",
          "name": "MilestoneAchievement",
          "responsible": "EngineeringConsultant",
          "satisfies": [],
          "status": "pending",
        },
        {
          "description": "Conditional lien waivers from all contractors",
          "name": "LienWaivers",
          "responsible": "GeneralContractor",
          "satisfies": [],
          "status": "pending",
        },
        {
          "description": "Date-down title endorsement",
          "name": "TitleEndorsement",
          "responsible": "TitleCompany",
          "satisfies": [],
          "status": "pending",
        },
        {
          "description": "Independent Engineer construction progress report",
          "name": "InspectionReport",
          "responsible": "EngineeringConsultant",
          "satisfies": [],
          "status": "pending",
        },
        {
          "description": "OEM certification of critical equipment",
          "name": "EquipmentCertification",
          "responsible": "EquipmentSupplier",
          "satisfies": [],
          "status": "pending",
        },
      ],
      "name": "SubsequentDraws",
      "pending": 5,
      "satisfied": 0,
      "section": "4.02",
      "totalConditions": 5,
      "waived": 0,
    },
  ],
  "covenants": {
    "__error": "Undefined identifier: senior_debt",
  },
  "definitions": [
    {
      "name": "ContractedRevenue",
      "value": {
        "__error": "Undefined identifier: anchor_tenant_revenue",
      },
    },
    {
      "name": "DSCR",
      "value": {
        "__error": "Undefined identifier: net_income",
      },
    },
    {
      "name": "DebtService",
      "value": {
        "__error": "Undefined identifier: senior_interest",
      },
    },
    {
      "name": "EBITDA",
      "value": {
        "__error": "Undefined identifier: net_income",
      },
    },
    {
      "name": "Leverage",
      "value": {
        "__error": "Undefined identifier: senior_debt",
      },
    },
    {
      "name": "OccupancyRate",
      "value": {
        "__error": "Undefined identifier: leased_capacity",
      },
    },
    {
      "name": "RevenuePerKW",
      "value": {
        "__error": "Undefined identifier: anchor_tenant_revenue",
      },
    },
    {
      "name": "SeniorDebt",
      "value": {
        "__error": "Undefined identifier: senior_debt",
      },
    },
    {
      "name": "TotalDebt",
      "value": {
        "__error": "Undefined identifier: senior_debt",
      },
    },
  ],
  "performanceGuarantees": [
    {
      "actual": 1.22,
      "guaranteePeriod": "3 years",
      "meetsGuarantee": true,
      "metric": "pue",
      "name": "CoolingEfficiency",
      "p50": 1.2,
      "p75": 1.25,
      "p90": 1.3,
      "p99": 1.4,
      "performanceLevel": "p50",
      "shortfall": 0.17999999999999994,
      "shortfallPayment": 0,
    },
    {
      "actual": 0.8,
      "guaranteePeriod": null,
      "meetsGuarantee": true,
      "metric": "latency_ms",
      "name": "NetworkLatency",
      "p50": 0.5,
      "p75": 1,
      "p90": 2,
      "p99": 5,
      "performanceLevel": "p50",
      "shortfall": 4.2,
      "shortfallPayment": 0,
    },
    {
      "actual": 99.9995,
      "guaranteePeriod": null,
      "meetsGuarantee": true,
      "metric": "power_availability_pct",
      "name": "PowerAvailability",
      "p50": 99.9999,
      "p75": 99.999,
      "p90": 99.995,
      "p99": 99.99,
      "performanceLevel": "p75",
      "shortfall": 0,
      "shortfallPayment": 0,
    },
    {
      "actual": 99.997,
      "guaranteePeriod": "5 years",
      "meetsGuarantee": true,
      "metric": "uptime_pct",
      "name": "Uptime",
      "p50": 99.999,
      "p75": 99.995,
      "p90": 99.99,
      "p99": 99.95,
      "performanceLevel": "p75",
      "shortfall": 0,
      "shortfallPayment": 0,
    },
  ],
  "phase": {
    "active": [
      "InterestCoverage",
      "MinDSCR",
      "MinEquityContribution",
      "OccupancyMinimum",
      "PUEMaximum",
      "TenantConcentration",
      "UptimeMinimum",
    ],
    "current": "Development",
    "required": [],
    "suspended": [
      "SeniorDSCR",
      "TotalLeverage",
    ],
    "transitions": [
      {
        "conditions": [
          {
            "met": false,
            "name": "AllPermitsSecured",
          },
          {
            "met": false,
            "name": "AnchorTenantSigned",
          },
          {
            "met": true,
            "name": "PowerContractExecuted",
          },
          {
            "met": false,
            "name": "FinancingCommitment",
          },
        ],
        "name": "NTP_Achieved",
        "targetPhase": "Construction",
        "triggered": false,
      },
      {
        "conditions": [
          {
            "met": false,
            "name": "SubstantialCompletion",
          },
          {
            "met": false,
            "name": "PowerCertification",
          },
          {
            "met": false,
            "name": "CoolingCommissioned",
          },
          {
            "met": false,
            "name": "UptimeTestPassed",
          },
          {
            "met": false,
            "name": "TenantReadiness",
          },
        ],
        "name": "COD_Achieved",
        "targetPhase": "Operations",
        "triggered": false,
      },
    ],
  },
  "regulatoryRequirements": [
    {
      "agency": "City Building Dept",
      "approvalDate": "2024-11-15",
      "blocking": false,
      "description": null,
      "name": "BuildingPermit",
      "requiredFor": "Construction",
      "requirementType": "Commercial Building Permit",
      "satisfies": [],
      "status": "approved",
    },
    {
      "agency": "City Building Dept",
      "approvalDate": "2024-12-01",
      "blocking": false,
      "description": null,
      "name": "ElectricalPermit",
      "requiredFor": "Construction",
      "requirementType": "High Voltage Electrical Permit",
      "satisfies": [],
      "status": "approved",
    },
    {
      "agency": "State EPA",
      "approvalDate": "2025-02-15",
      "blocking": false,
      "description": null,
      "name": "EnvironmentalCompliance",
      "requiredFor": "Operations",
      "requirementType": "Generator Air Quality Permit",
      "satisfies": [],
      "status": "approved",
    },
    {
      "agency": "Fire Marshal",
      "approvalDate": "2025-01-10",
      "blocking": false,
      "description": null,
      "name": "FireSuppression",
      "requiredFor": "Construction",
      "requirementType": "Fire Suppression System Approval",
      "satisfies": [],
      "status": "approved",
    },
    {
      "agency": "ISO",
      "approvalDate": null,
      "blocking": true,
      "description": null,
      "name": "ISO27001",
      "requiredFor": "Operations",
      "requirementType": "Information Security Certification",
      "satisfies": [],
      "status": "pending",
    },
    {
      "agency": "PCI Council",
      "approvalDate": null,
      "blocking": true,
      "description": null,
      "name": "PCI_DSS",
      "requiredFor": "Operations",
      "requirementType": "PCI DSS Compliance",
      "satisfies": [],
      "status": "pending",
    },
    {
      "agency": "AICPA",
      "approvalDate": null,
      "blocking": true,
      "description": null,
      "name": "SOC2_Compliance",
      "requiredFor": "Operations",
      "requirementType": "SOC 2 Type II Certification",
      "satisfies": [
        "SecurityCertification",
      ],
      "status": "pending",
    },
    {
      "agency": "Utility Company",
      "approvalDate": "2024-10-20",
      "blocking": false,
      "description": null,
      "name": "UtilityInterconnect",
      "requiredFor": "Construction",
      "requirementType": "Service Agreement",
      "satisfies": [
        "PowerContractExecuted",
      ],
      "status": "approved",
    },
  ],
  "reserves": {
    "__error": "Undefined identifier: monthly_debt_service",
  },
  "seasonalAdjustments": [
    {
      "active": false,
      "adjustedValue": 0,
      "adjustmentFactor": 1.25,
      "baseValue": 0,
      "metric": "power_cost",
      "name": "SummerCooling",
      "reason": "Higher cooling demand in summer",
      "seasons": [
        "Q2",
        "Q3",
      ],
    },
    {
      "active": false,
      "adjustedValue": 0,
      "adjustmentFactor": 0.92,
      "baseValue": 0,
      "metric": "pue",
      "name": "WinterEfficiency",
      "reason": "Free cooling available in winter",
      "seasons": [
        "Q1",
        "Q4",
      ],
    },
  ],
  "technicalMilestones": [
    {
      "achievedDate": undefined,
      "completionPercent": 70,
      "currentValue": 10500,
      "daysToLongstop": -308,
      "daysToTarget": -398,
      "longstopDate": "2028-02-28",
      "measurement": "cooling tons",
      "name": "CoolingInfrastructure",
      "prerequisites": [
        {
          "met": false,
          "name": "ShellComplete",
        },
      ],
      "progressMetric": null,
      "status": "breached",
      "targetDate": "2027-11-30",
      "targetValue": 15000,
    },
    {
      "achievedDate": undefined,
      "completionPercent": 100,
      "currentValue": 100,
      "daysToLongstop": -536,
      "daysToTarget": -597,
      "longstopDate": "2027-07-15",
      "measurement": "foundation percent",
      "name": "FoundationComplete",
      "prerequisites": [
        {
          "met": true,
          "name": "SitePreparation",
        },
      ],
      "progressMetric": null,
      "status": "achieved",
      "targetDate": "2027-05-15",
      "targetValue": 100,
    },
    {
      "achievedDate": undefined,
      "completionPercent": 75,
      "currentValue": 6,
      "daysToLongstop": -292,
      "daysToTarget": -383,
      "longstopDate": "2028-03-15",
      "measurement": "generators installed",
      "name": "GeneratorInstallation",
      "prerequisites": [
        {
          "met": false,
          "name": "PowerInfrastructure",
        },
      ],
      "progressMetric": null,
      "status": "breached",
      "targetDate": "2027-12-15",
      "targetValue": 8,
    },
    {
      "achievedDate": undefined,
      "completionPercent": 75,
      "currentValue": 75,
      "daysToLongstop": -231,
      "daysToTarget": -321,
      "longstopDate": "2028-05-15",
      "measurement": "network percent",
      "name": "NetworkInfrastructure",
      "prerequisites": [
        {
          "met": false,
          "name": "ShellComplete",
        },
      ],
      "progressMetric": null,
      "status": "breached",
      "targetDate": "2028-02-15",
      "targetValue": 100,
    },
    {
      "achievedDate": undefined,
      "completionPercent": 70,
      "currentValue": 35,
      "daysToLongstop": -336,
      "daysToTarget": -428,
      "longstopDate": "2028-01-31",
      "measurement": "MW commissioned",
      "name": "PowerInfrastructure",
      "prerequisites": [
        {
          "met": false,
          "name": "ShellComplete",
        },
      ],
      "progressMetric": null,
      "status": "breached",
      "targetDate": "2027-10-31",
      "targetValue": 50,
    },
    {
      "achievedDate": undefined,
      "completionPercent": 80,
      "currentValue": 80,
      "daysToLongstop": -215,
      "daysToTarget": -308,
      "longstopDate": "2028-05-31",
      "measurement": "security percent",
      "name": "SecuritySystems",
      "prerequisites": [
        {
          "met": false,
          "name": "ShellComplete",
        },
      ],
      "progressMetric": null,
      "status": "breached",
      "targetDate": "2028-02-28",
      "targetValue": 100,
    },
    {
      "achievedDate": undefined,
      "completionPercent": 85,
      "currentValue": 85,
      "daysToLongstop": -398,
      "daysToTarget": -490,
      "longstopDate": "2027-11-30",
      "measurement": "shell percent",
      "name": "ShellComplete",
      "prerequisites": [
        {
          "met": true,
          "name": "FoundationComplete",
        },
      ],
      "progressMetric": null,
      "status": "breached",
      "targetDate": "2027-08-30",
      "targetValue": 100,
    },
    {
      "achievedDate": undefined,
      "completionPercent": 100,
      "currentValue": 100,
      "daysToLongstop": -611,
      "daysToTarget": -672,
      "longstopDate": "2027-05-01",
      "measurement": "site ready percent",
      "name": "SitePreparation",
      "prerequisites": [],
      "progressMetric": null,
      "status": "achieved",
      "targetDate": "2027-03-01",
      "targetValue": 100,
    },
    {
      "achievedDate": undefined,
      "completionPercent": 78,
      "currentValue": null,
      "daysToLongstop": -185,
      "daysToTarget": -276,
      "longstopDate": "2028-06-30",
      "measurement": null,
      "name": "SubstantialCompletion",
      "prerequisites": [
        {
          "met": false,
          "name": "PowerInfrastructure",
        },
        {
          "met": false,
          "name": "CoolingInfrastructure",
        },
        {
          "met": false,
          "name": "NetworkInfrastructure",
        },
        {
          "met": false,
          "name": "SecuritySystems",
        },
      ],
      "progressMetric": 0.78,
      "status": "breached",
      "targetDate": "2028-03-31",
      "targetValue": null,
    },
    {
      "achievedDate": undefined,
      "completionPercent": 75,
      "currentValue": 3,
      "daysToLongstop": -261,
      "daysToTarget": -352,
      "longstopDate": "2028-04-15",
      "measurement": "ups systems",
      "name": "UPSCommissioning",
      "prerequisites": [
        {
          "met": false,
          "name": "PowerInfrastructure",
        },
      ],
      "progressMetric": null,
      "status": "breached",
      "targetDate": "2028-01-15",
      "targetValue": 4,
    },
  ],
}
`;

exports[`Golden files — shipped example deals > leveraged_facility.proviso evaluates identically 1`] = `
{
  "baskets": [
    {
      "available": 40000000,
      "basketType": "fixed",
      "capacity": 40000000,
      "name": "GeneralInvestments",
      "used": 0,
    },
    {
      "available": 25000000,
      "baseCapacity": 23550000,
      "basketType": "grower",
      "capacity": 25000000,
      "floor": 25000000,
      "name": "GrowerInvestments",
      "used": 0,
    },
    {
      "available": 20000000,
      "basketType": "fixed",
      "capacity": 20000000,
      "name": "RestrictedPayments",
      "used": 0,
    },
  ],
  "covenants": [
    {
      "activeStep": {
        "afterDate": "2028-12-31",
        "threshold": 5,
      },
      "actual": 4.54140127388535,
      "compliant": true,
      "headroom": 0.4585987261146496,
      "name": "MaxNetLeverage",
      "nextStep": {
        "afterDate": "2029-12-31",
        "threshold": 4.5,
      },
      "operator": "<=",
      "originalThreshold": 5.5,
      "threshold": 5,
      "unit": "ratio",
    },
    {
      "actual": 1.9210180171912759,
      "compliant": true,
      "headroom": 0.7710180171912759,
      "name": "MinFixedChargeCoverage",
      "operator": ">=",
      "threshold": 1.15,
      "unit": "ratio",
    },
    {
      "actual": 2.380140231191965,
      "compliant": true,
      "headroom": 0.38014023119196505,
      "name": "MinInterestCoverage",
      "operator": ">=",
      "threshold": 2,
      "unit": "ratio",
    },
  ],
  "definitions": [
    {
      "name": "ConsolidatedEBITDA",
      "value": 157000000,
    },
    {
      "name": "FixedChargeCoverage",
      "value": 1.9210180171912759,
    },
    {
      "name": "InterestCoverage",
      "value": 2.380140231191965,
    },
    {
      "name": "NetLeverage",
      "value": 4.54140127388535,
    },
    {
      "name": "TotalLeverage",
      "value": 4.859872611464968,
    },
  ],
}
`;

exports[`Golden files — shipped example deals > project_finance.proviso evaluates identically 1`] = `
{
  "baskets": [],
  "conditionsPrecedent": [
    {
      "complete": false,
      "conditions": [
        {
          "description": "Updated Lien Search Results",
          "name": "Draw3LienSearch",
          "responsible": "Agent",
          "satisfies": [],
          "status": "pending",
        },
        {
          "description": "Date-Down Title Endorsement",
          "name": "Draw3TitleEndorsement",
          "responsible": "Borrower",
          "satisfies": [],
          "status": "pending",
        },
        {
          "description": "Construction Inspection Report",
          "name": "Draw3Inspection",
          "responsible": "EngineeringConsultant",
          "satisfies": [],
          "status": "pending",
        },
        {
          "description": "Contractor Partial Lien Waiver",
          "name": "Draw3ContractorWaiver",
          "responsible": "GeneralContractor",
          "satisfies": [],
          "status": "pending",
        },
        {
          "description": "Updated Budget and Schedule",
          "name": "Draw3BudgetReconciliation",
          "responsible": "Borrower",
          "satisfies": [],
          "status": "pending",
        },
      ],
      "name": "Draw3",
      "pending": 5,
      "satisfied": 0,
      "section": "4.02(c)",
      "totalConditions": 5,
      "waived": 0,
    },
    {
      "complete": false,
      "conditions": [
        {
          "description": "Executed Credit Agreement and all Loan Documents",
          "name": "ExecutedCreditAgreement",
          "responsible": "Agent",
          "satisfies": [],
          "status": "pending",
        },
        {
          "description": "Opinions of Borrower's Counsel and Local Counsel",
          "name": "LegalOpinions",
          "responsible": "BorrowerCounsel",
          "satisfies": [],
          "status": "pending",
        },
        {
          "description": "Evidence of Initial Equity Contribution",
          "name": "EquityContribution",
          "responsible": "Sponsor",
          "satisfies": [
            "MinEquityContribution",
          ],
          "status": "pending",
        },
        {
          "description": "Evidence of Required Insurance Coverage",
          "name": "InsuranceCertificates",
          "responsible": "Borrower",
          "satisfies": [],
          "status": "pending",
        },
        {
          "description": "Phase I Environmental Site Assessment",
          "name": "EnvironmentalReport",
          "responsible": "Borrower",
          "satisfies": [],
          "status": "pending",
        },
      ],
      "name": "InitialFunding",
      "pending": 5,
      "satisfied": 0,
      "section": "4.01",
      "totalConditions": 5,
      "waived": 0,
    },
  ],
  "covenants": [
    {
      "actual": 3.5,
      "compliant": true,
      "headroom": 1,
      "name": "InterestCoverage",
      "operator": ">=",
      "threshold": 2.5,
      "unit": "number",
    },
    {
      "actual": 3,
      "compliant": true,
      "headroom": 1.75,
      "name": "MinDSCR",
      "operator": ">=",
      "threshold": 1.25,
      "unit": "number",
    },
    {
      "actual": 55000000,
      "compliant": true,
      "headroom": 2500000,
      "name": "MinEquityContribution",
      "operator": ">=",
      "threshold": 52500000,
      "unit": "number",
    },
    {
      "actual": 4.761904761904762,
      "compliant": false,
      "headroom": -1.7619047619047619,
      "name": "SeniorLeverage",
      "operator": "<=",
      "threshold": 3,
      "unit": "number",
    },
    {
      "actual": 5.714285714285714,
      "compliant": false,
      "headroom": -1.2142857142857144,
      "name": "TotalLeverage",
      "operator": "<=",
      "threshold": 4.5,
      "unit": "number",
    },
  ],
  "definitions": [
    {
      "name": "DSCR",
      "value": 3,
    },
    {
      "name": "DebtService",
      "value": 7000000,
    },
    {
      "name": "EBITDA",
      "value": 21000000,
    },
    {
      "name": "Leverage",
      "value": 5.714285714285714,
    },
    {
      "name": "ProjectedDSCR",
      "value": 6.571428571428571,
    },
    {
      "name": "SeniorDebt",
      "value": 100000000,
    },
    {
      "name": "SeniorLeverage",
      "value": 4.761904761904762,
    },
    {
      "name": "TotalDebt",
      "value": 120000000,
    },
  ],
  "milestones": [
    {
      "achievedDate": undefined,
      "daysToLongstop": -459,
      "daysToTarget": -551,
      "longstopDate": "2027-09-30",
      "name": "FoundationComplete",
      "prerequisites": [],
      "status": "breached",
      "targetDate": "2027-06-30",
    },
    {
      "achievedDate": undefined,
      "daysToLongstop": -214,
      "daysToTarget": -275,
      "longstopDate": "2028-06-01",
      "name": "MEPComplete",
      "prerequisites": [
        {
          "met": false,
          "name": "RoofComplete",
        },
      ],
      "status": "breached",
      "targetDate": "2028-04-01",
    },
    {
      "achievedDate": undefined,
      "daysToLongstop": -292,
      "daysToTarget": -352,
      "longstopDate": "2028-03-15",
      "name": "RoofComplete",
      "prerequisites": [
        {
          "met": false,
          "name": "SteelErection",
        },
      ],
      "status": "breached",
      "targetDate": "2028-01-15",
    },
    {
      "achievedDate": undefined,
      "daysToLongstop": -367,
      "daysToTarget": -459,
      "longstopDate": "2027-12-31",
      "name": "SteelErection",
      "prerequisites": [
        {
          "met": false,
          "name": "FoundationComplete",
        },
      ],
      "status": "breached",
      "targetDate": "2027-09-30",
    },
    {
      "achievedDate": undefined,
      "daysToLongstop": -139,
      "daysToTarget": -200,
      "longstopDate": "2028-08-15",
      "name": "SubstantialCompletion",
      "prerequisites": [
        {
          "met": false,
          "name": "RoofComplete",
        },
        {
          "met": false,
          "name": "MEPComplete",
        },
        {
          "met": false,
          "name": "FinalInspection",
        },
      ],
      "status": "breached",
      "targetDate": "2028-06-15",
    },
  ],
  "phase": {
    "active": [
      "MinDSCR",
      "MinEquityContribution",
      "SeniorLeverage",
    ],
    "current": "Construction",
    "required": [
      "MinEquityContribution",
    ],
    "suspended": [
      "InterestCoverage",
      "TotalLeverage",
    ],
    "transitions": [
      {
        "conditions": [
          {
            "met": false,
            "name": "SubstantialCompletion",
          },
          {
            "met": false,
            "name": "LenderCertification",
          },
          {
            "met": false,
            "name": "FinalInspection",
          },
          {
            "met": false,
            "name": "InsuranceTransition",
          },
        ],
        "name": "COD_Achieved",
        "targetPhase": "Operations",
        "triggered": false,
      },
    ],
  },
  "reserves": [
    {
      "availableForRelease": 0,
      "balance": 0,
      "belowMinimum": true,
      "fundedPercent": 0,
      "minimum": 15000000,
      "name": "DebtServiceReserve",
      "target": 30000000,
    },
    {
      "availableForRelease": 0,
      "balance": 0,
      "belowMinimum": false,
      "fundedPercent": 0,
      "minimum": 0,
      "name": "DistributionLockupReserve",
      "target": 50000000,
    },
    {
      "availableForRelease": 0,
      "balance": 0,
      "belowMinimum": true,
      "fundedPercent": 0,
      "minimum": 8000000,
      "name": "MaintenanceReserve",
      "target": 16000000,
    },
  ],
}
`;

exports[`Golden files — shipped example deals > solar_utility.proviso evaluates identically 1`] = `
{
  "baskets": [
    {
      "available": 14750000,
      "basketType": "fixed",
      "capacity": 14750000,
      "name": "CapexBasket",
      "used": 0,
    },
    {
      "available": 10000000,
      "baseCapacity": 10000000,
      "basketType": "grower",
      "capacity": 10000000,
      "floor": 5000000,
      "name": "DistributionCapacity",
      "used": 0,
    },
    {
      "available": 5000000,
      "basketType": "fixed",
      "capacity": 5000000,
      "name": "GeneralInvestment",
      "used": 0,
    },
  ],
  "conditionsPrecedent": [
    {
      "complete": false,
      "conditions": [
        {
          "description": "Engineer's certificate of substantial completion",
          "name": "SubstantialCompletionCertificate",
          "responsible": "EngineeringConsultant",
          "satisfies": [
            "SubstantialCompletion",
          ],
          "status": "pending",
        },
        {
          "description": "Unconditional final lien waivers",
          "name": "FinalLienWaivers",
          "responsible": "GeneralContractor",
          "satisfies": [],
          "status": "pending",
        },
        {
          "description": "Successful completion of performance test",
          "name": "PerformanceTest",
          "responsible": "EngineeringConsultant",
          "satisfies": [
            "PerformanceTestPassed",
          ],
          "status": "pending",
        },
        {
          "description": "Operations phase insurance coverage",
          "name": "OperationsInsurance",
          "responsible": "Borrower",
          "satisfies": [
            "InsuranceTransition",
          ],
          "status": "pending",
        },
        {
          "description": "ISO confirmation of commercial operation",
          "name": "GridConnectionCertificate",
          "responsible": "CAISO",
          "satisfies": [],
          "status": "pending",
        },
        {
          "description": "Tax equity capital contribution",
          "name": "TaxEquityFunding",
          "responsible": "TaxEquityInvestor",
          "satisfies": [],
          "status": "pending",
        },
      ],
      "name": "COD_Funding",
      "pending": 6,
      "satisfied": 0,
      "section": "4.03",
      "totalConditions": 6,
      "waived": 0,
    },
    {
      "complete": false,
      "conditions": [
        {
          "description": "Executed Credit Agreement and all Loan Documents",
          "name": "ExecutedCreditAgreement",
          "responsible": "Agent",
          "satisfies": [],
          "status": "pending",
        },
        {
          "description": "Binding commitment from Tax Equity Investor",
          "name": "TaxEquityCommitmentLetter",
          "responsible": "Sponsor",
          "satisfies": [
            "TaxEquityCommitment",
          ],
          "status": "pending",
        },
        {
          "description": "Opinions of Borrower's Counsel and Local Counsel",
          "name": "LegalOpinions",
          "responsible": "BorrowerCounsel",
          "satisfies": [],
          "status": "pending",
        },
        {
          "description": "Evidence of Initial Equity Contribution (30%)",
          "name": "EquityContribution",
          "responsible": "Sponsor",
          "satisfies": [
            "MinEquityContribution",
          ],
          "status": "pending",
        },
        {
          "description": "Builder's Risk, GL, and Umbrella Insurance",
          "name": "InsuranceCertificates",
          "responsible": "Borrower",
          "satisfies": [],
          "status": "pending",
        },
        {
          "description": "Executed EPC Contract with creditworthy contractor",
          "name": "EPCContract",
          "responsible": "Borrower",
          "satisfies": [],
          "status": "pending",
        },
        {
          "description": "Executed Power Purchase Agreement (25 years)",
          "name": "PPA_Contract",
          "responsible": "Borrower",
          "satisfies": [
            "OffTakeExecuted",
          ],
          "status": "pending",
        },
        {
          "description": "Executed LGIA with transmission owner",
          "name": "InterconnectionAgreement",
          "responsible": "Borrower",
          "satisfies": [],
          "status": "pending",
        },
        {
          "description": "All permits required for construction commencement",
          "name": "AllPermits",
          "responsible": "Borrower",
          "satisfies": [
            "AllPermitsSecured",
          ],
          "status": "pending",
        },
        {
          "description": "Phase I ESA and NEPA compliance",
          "name": "EnvironmentalReport",
          "responsible": "Borrower",
          "satisfies": [],
          "status": "pending",
        },
      ],
      "name": "InitialFunding",
      "pending": 10,
      "satisfied": 0,
      "section": "4.01",
      "totalConditions": 10,
      "waived": 0,
    },
    {
      "complete": false,
      "conditions": [
        {
          "description": "Applicable milestone achieved per construction schedule",
          "name": "MilestoneAchievement",
          "responsible": "EngineeringConsultant",
          "satisfies": [],
          "status": "pending",
        },
        {
          "description": "Conditional lien waivers from all contractors",
          "name": "LienWaivers",
          "responsible": "GeneralContractor",
          "satisfies": [],
          "status": "pending",
        },
        {
          "description": "Date-down title endorsement",
          "name": "TitleEndorsement",
          "responsible": "TitleCompany",
          "satisfies": [],
          "status": "pending",
        },
        {
          "description": "Independent Engineer construction progress report",
          "name": "InspectionReport",
          "responsible": "EngineeringConsultant",
          "satisfies": [],
          "status": "pending",
        },
        {
          "description": "Updated construction budget and schedule",
          "name": "BudgetCertification",
          "responsible": "Borrower",
          "satisfies": [],
          "status": "pending",
        },
      ],
      "name": "SubsequentDraws",
      "pending": 5,
      "satisfied": 0,
      "section": "4.02",
      "totalConditions": 5,
      "waived": 0,
    },
  ],
  "covenants": [
    {
      "actual": 98.8,
      "compliant": true,
      "headroom": 2.799999999999997,
      "name": "AvailabilityMinimum",
      "operator": ">=",
      "threshold": 96,
      "unit": "number",
    },
    {
      "actual": 4.788732394366197,
      "compliant": true,
      "headroom": 2.788732394366197,
      "name": "InterestCoverage",
      "operator": ">=",
      "threshold": 2,
      "unit": "number",
    },
    {
      "actual": 4.533333333333333,
      "compliant": true,
      "headroom": 3.333333333333333,
      "name": "MinDSCR",
      "operator": ">=",
      "threshold": 1.2,
      "unit": "number",
    },
    {
      "actual": 84000000,
      "compliant": true,
      "headroom": 0,
      "name": "MinEquityContribution",
      "operator": ">=",
      "threshold": 84000000,
      "unit": "number",
    },
    {
      "actual": 485,
      "compliant": true,
      "headroom": 45,
      "name": "ProductionMinimum",
      "operator": ">=",
      "threshold": 440,
      "unit": "number",
    },
    {
      "actual": 4.533333333333333,
      "compliant": true,
      "headroom": 3.2333333333333334,
      "name": "SeniorDSCR",
      "operator": ">=",
      "threshold": 1.3,
      "unit": "number",
    },
    {
      "actual": 4.117647058823529,
      "compliant": true,
      "headroom": 0.882352941176471,
      "name": "TotalLeverage",
      "operator": "<=",
      "threshold": 5,
      "unit": "number",
    },
  ],
  "definitions": [
    {
      "name": "DSCR",
      "value": 4.533333333333333,
    },
    {
      "name": "DebtService",
      "value": 15000000,
    },
    {
      "name": "EBITDA",
      "value": 68000000,
    },
    {
      "name": "Leverage",
      "value": 4.117647058823529,
    },
    {
      "name": "NetEnergy",
      "value": 499000,
    },
    {
      "name": "RevenuePerkWh",
      "value": 84.16833667334669,
    },
    {
      "name": "SeniorDebt",
      "value": 180000000,
    },
    {
      "name": "SeniorLeverage",
      "value": 2.6470588235294117,
    },
    {
      "name": "TotalDebt",
      "value": 280000000,
    },
  ],
  "performanceGuarantees": [
    {
      "actual": 485,
      "guaranteePeriod": "20 years",
      "meetsGuarantee": true,
      "metric": "annual_gwh",
      "name": "AnnualEnergyProduction",
      "p50": 520,
      "p75": 495,
      "p90": 470,
      "p99": 440,
      "performanceLevel": "p90",
      "shortfall": 0,
      "shortfallPayment": 0,
    },
    {
      "actual": 98.8,
      "guaranteePeriod": null,
      "meetsGuarantee": true,
      "metric": "availability_pct",
      "name": "Availability",
      "p50": 99,
      "p75": 98.5,
      "p90": 97.5,
      "p99": 96,
      "performanceLevel": "p75",
      "shortfall": 0,
      "shortfallPayment": 0,
    },
    {
      "actual": 27.6,
      "guaranteePeriod": "20 years",
      "meetsGuarantee": true,
      "metric": "capacity_factor_pct",
      "name": "CapacityFactor",
      "p50": 29.7,
      "p75": 28.3,
      "p90": 26.9,
      "p99": 25.1,
      "performanceLevel": "p90",
      "shortfall": 0,
      "shortfallPayment": 0,
    },
    {
      "actual": 81.2,
      "guaranteePeriod": "10 years",
      "meetsGuarantee": true,
      "metric": "performance_ratio_pct",
      "name": "PerformanceRatio",
      "p50": 84.5,
      "p75": 82,
      "p90": 79.5,
      "p99": 76,
      "performanceLevel": "p90",
      "shortfall": 0,
      "shortfallPayment": 0,
    },
  ],
  "phase": {
    "active": [
      "AvailabilityMinimum",
      "MinDSCR",
      "MinEquityContribution",
      "ProductionMinimum",
    ],
    "current": "Development",
    "required": [],
    "suspended": [
      "InterestCoverage",
      "SeniorDSCR",
      "TotalLeverage",
    ],
    "transitions": [
      {
        "conditions": [
          {
            "met": false,
            "name": "AllPermitsSecured",
          },
          {
            "met": false,
            "name": "OffTakeExecuted",
          },
          {
            "met": true,
            "name": "InterconnectionApproved",
          },
          {
            "met": true,
            "name": "TaxEquityCommitment",
          },
        ],
        "name": "NTP_Achieved",
        "targetPhase": "Construction",
        "triggered": false,
      },
      {
        "conditions": [
          {
            "met": false,
            "name": "SubstantialCompletion",
          },
          {
            "met": false,
            "name": "FinalInspection",
          },
          {
            "met": false,
            "name": "GridSynchronization",
          },
          {
            "met": false,
            "name": "InsuranceTransition",
          },
          {
            "met": false,
            "name": "PerformanceTestPassed",
          },
        ],
        "name": "COD_Achieved",
        "targetPhase": "Operations",
        "triggered": false,
      },
    ],
  },
  "regulatoryRequirements": [
    {
      "agency": "BLM",
      "approvalDate": "2024-09-30",
      "blocking": false,
      "description": null,
      "name": "BLM_ROW",
      "requiredFor": "Construction",
      "requirementType": "Right-of-Way Grant",
      "satisfies": [],
      "status": "approved",
    },
    {
      "agency": "County Building",
      "approvalDate": "2025-02-01",
      "blocking": false,
      "description": null,
      "name": "Building_Permit",
      "requiredFor": "Construction",
      "requirementType": "Commercial Building Permit",
      "satisfies": [],
      "status": "approved",
    },
    {
      "agency": "UL/IEC",
      "approvalDate": null,
      "blocking": true,
      "description": null,
      "name": "CPV_Certification",
      "requiredFor": "Operations",
      "requirementType": "Module Certification",
      "satisfies": [],
      "status": "pending",
    },
    {
      "agency": "County Planning",
      "approvalDate": "2024-10-22",
      "blocking": false,
      "description": null,
      "name": "CUP_Permit",
      "requiredFor": "Development",
      "requirementType": "Conditional Use Permit",
      "satisfies": [],
      "status": "approved",
    },
    {
      "agency": "FAA",
      "approvalDate": "2024-11-15",
      "blocking": false,
      "description": null,
      "name": "FAA_Obstruction",
      "requiredFor": "Construction",
      "requirementType": "Obstruction Evaluation",
      "satisfies": [],
      "status": "approved",
    },
    {
      "agency": "NERC/WECC",
      "approvalDate": null,
      "blocking": true,
      "description": null,
      "name": "Grid_Compliance",
      "requiredFor": "Operations",
      "requirementType": "Grid Code Compliance",
      "satisfies": [
        "GridSynchronization",
      ],
      "status": "pending",
    },
    {
      "agency": "CAISO",
      "approvalDate": "2024-12-10",
      "blocking": false,
      "description": null,
      "name": "LGIA_Interconnection",
      "requiredFor": "Development",
      "requirementType": "Large Generator Interconnection Agreement",
      "satisfies": [
        "InterconnectionApproved",
      ],
      "status": "approved",
    },
    {
      "agency": "USFWS",
      "approvalDate": "2024-08-15",
      "blocking": false,
      "description": null,
      "name": "NEPA_EA",
      "requiredFor": "Development",
      "requirementType": "Environmental Assessment",
      "satisfies": [],
      "status": "approved",
    },
    {
      "agency": "State Water Board",
      "approvalDate": "2025-01-05",
      "blocking": false,
      "description": null,
      "name": "Stormwater_NPDES",
      "requiredFor": "Construction",
      "requirementType": "NPDES Construction Permit",
      "satisfies": [],
      "status": "approved",
    },
  ],
  "reserves": [
    {
      "availableForRelease": 0,
      "balance": 0,
      "belowMinimum": true,
      "fundedPercent": 0,
      "minimum": 3750000,
      "name": "DebtServiceReserve",
      "target": 7500000,
    },
    {
      "availableForRelease": 0,
      "balance": 0,
      "belowMinimum": true,
      "fundedPercent": 0,
      "minimum": 7500000,
      "name": "DecommissioningReserve",
      "target": 15000000,
    },
    {
      "availableForRelease": 0,
      "balance": 0,
      "belowMinimum": true,
      "fundedPercent": 0,
      "minimum": 1200000,
      "name": "MajorMaintenanceReserve",
      "target": 2400000,
    },
  ],
  "seasonalAdjustments": [
    {
      "active": false,
      "adjustedValue": 0,
      "adjustmentFactor": 0.95,
      "baseValue": 0,
      "metric": "energy_production",
      "name": "FallTransition",
      "reason": "Decreasing daylight, harvest dust",
      "seasons": [
        "Q4",
      ],
    },
    {
      "active": false,
      "adjustedValue": 0,
      "adjustmentFactor": 1.08,
      "baseValue": 0,
      "metric": "energy_production",
      "name": "SpringTransition",
      "reason": "Increasing daylight, moderate temperatures",
      "seasons": [
        "Q2",
      ],
    },
    {
      "active": false,
      "adjustedValue": 0,
      "adjustmentFactor": 1.25,
      "baseValue": 0,
      "metric": "energy_production",
      "name": "SummerPeak",
      "reason": "Peak solar irradiance, longest days",
      "seasons": [
        "Q3",
      ],
    },
    {
      "active": false,
      "adjustedValue": 0,
      "adjustmentFactor": 0.72,
      "baseValue": 0,
      "metric": "energy_production",
      "name": "WinterReduction",
      "reason": "Shorter days, lower sun angle",
      "seasons": [
        "Q1",
      ],
    },
  ],
  "technicalMilestones": [
    {
      "achievedDate": undefined,
      "completionPercent": 0,
      "currentValue": 0,
      "daysToLongstop": -170,
      "daysToTarget": -261,
      "longstopDate": "2028-07-15",
      "measurement": "grid sync complete",
      "name": "GridSynchronization",
      "prerequisites": [
        {
          "met": false,
          "name": "InverterCommissioning",
        },
        {
          "met": false,
          "name": "SubstationComplete",
        },
      ],
      "progressMetric": null,
      "status": "breached",
      "targetDate": "2028-04-15",
      "targetValue": 1,
    },
    {
      "achievedDate": undefined,
      "completionPercent": 70,
      "currentValue": 28,
      "daysToLongstop": -215,
      "daysToTarget": -308,
      "longstopDate": "2028-05-31",
      "measurement": "inverters commissioned",
      "name": "InverterCommissioning",
      "prerequisites": [
        {
          "met": false,
          "name": "ModuleInstallation",
        },
      ],
      "progressMetric": null,
      "status": "breached",
      "targetDate": "2028-02-28",
      "targetValue": 40,
    },
    {
      "achievedDate": undefined,
      "completionPercent": 70,
      "currentValue": 140,
      "daysToLongstop": -292,
      "daysToTarget": -383,
      "longstopDate": "2028-03-15",
      "measurement": "MW installed",
      "name": "ModuleInstallation",
      "prerequisites": [
        {
          "met": false,
          "name": "TrackerInstallation",
        },
      ],
      "progressMetric": null,
      "status": "breached",
      "targetDate": "2027-12-15",
      "targetValue": 200,
    },
    {
      "achievedDate": undefined,
      "completionPercent": 85.55555555555556,
      "currentValue": 38500,
      "daysToLongstop": -459,
      "daysToTarget": -551,
      "longstopDate": "2027-09-30",
      "measurement": "piles driven",
      "name": "PileInstallation",
      "prerequisites": [
        {
          "met": true,
          "name": "SitePrepComplete",
        },
      ],
      "progressMetric": null,
      "status": "breached",
      "targetDate": "2027-06-30",
      "targetValue": 45000,
    },
    {
      "achievedDate": undefined,
      "completionPercent": 100,
      "currentValue": 1200,
      "daysToLongstop": -597,
      "daysToTarget": -658,
      "longstopDate": "2027-05-15",
      "measurement": "acres cleared",
      "name": "SitePrepComplete",
      "prerequisites": [],
      "progressMetric": null,
      "status": "achieved",
      "targetDate": "2027-03-15",
      "targetValue": 1200,
    },
    {
      "achievedDate": undefined,
      "completionPercent": 70,
      "currentValue": null,
      "daysToLongstop": -154,
      "daysToTarget": -246,
      "longstopDate": "2028-07-31",
      "measurement": null,
      "name": "SubstantialCompletion",
      "prerequisites": [
        {
          "met": false,
          "name": "ModuleInstallation",
        },
        {
          "met": false,
          "name": "InverterCommissioning",
        },
        {
          "met": false,
          "name": "SubstationComplete",
        },
      ],
      "progressMetric": 0.7,
      "status": "breached",
      "targetDate": "2028-04-30",
      "targetValue": null,
    },
    {
      "achievedDate": undefined,
      "completionPercent": 85,
      "currentValue": 85,
      "daysToLongstop": -185,
      "daysToTarget": -276,
      "longstopDate": "2028-06-30",
      "measurement": "substation completion",
      "name": "SubstationComplete",
      "prerequisites": [
        {
          "met": false,
          "name": "TrackerInstallation",
        },
      ],
      "progressMetric": null,
      "status": "breached",
      "targetDate": "2028-03-31",
      "targetValue": 100,
    },
    {
      "achievedDate": undefined,
      "completionPercent": 70,
      "currentValue": 1680,
      "daysToLongstop": -367,
      "daysToTarget": -459,
      "longstopDate": "2027-12-31",
      "measurement": "tracker rows installed",
      "name": "TrackerInstallation",
      "prerequisites": [
        {
          "met": false,
          "name": "PileInstallation",
        },
      ],
      "progressMetric": null,
      "status": "breached",
      "targetDate": "2027-09-30",
      "targetValue": 2400,
    },
  ],
}
`;

exports[`Golden files — shipped example deals > trailing_definitions.proviso evaluates identically 1`] = `
{
  "baskets": [
    {
      "available": 20000000,
      "baseCapacity": 4018500,
      "basketType": "grower",
      "capacity": 20000000,
      "floor": 20000000,
      "name": "AcquisitionBasket",
      "used": 0,
    },
    {
      "available": 25000000,
      "basketType": "fixed",
      "capacity": 25000000,
      "name": "GeneralInvestments",
      "used": 0,
    },
    {
      "accumulated": 0,
      "available": 0,
      "basketType": "builder",
      "capacity": 0,
      "maximum": 50000000,
      "name": "RetainedEarningsBasket",
      "starting": 0,
      "used": 0,
    },
  ],
  "covenants": [
    {
      "actual": 6.196341918626353,
      "compliant": false,
      "headroom": -1.696341918626353,
      "name": "MaxLeverage",
      "operator": "<=",
      "threshold": 4.5,
      "unit": "number",
    },
    {
      "actual": 5.953333333333333,
      "compliant": true,
      "headroom": 3.453333333333333,
      "name": "MinInterestCoverage",
      "operator": ">=",
      "threshold": 2.5,
      "unit": "number",
    },
    {
      "actual": 22000000,
      "compliant": true,
      "headroom": 7000000,
      "name": "MinLiquidity",
      "operator": ">=",
      "threshold": 15000000,
      "unit": "number",
    },
  ],
  "definitions": [
    {
      "name": "InterestCoverage",
      "value": 5.953333333333333,
    },
    {
      "name": "LTM_EBITDA",
      "value": 26790000,
    },
    {
      "name": "LTM_InterestExpense",
      "value": 4500000,
    },
    {
      "name": "Leverage",
      "value": 6.196341918626353,
    },
    {
      "name": "QuarterlyEBITDA",
      "value": 6840000,
    },
    {
      "name": "TotalDebt",
      "value": 166000000,
    },
  ],
  "evaluationPeriod": "2024-Q4",
  "periods": [
    "2024-Q1",
    "2024-Q2",
    "2024-Q3",
    "2024-Q4",
  ],
}
`;

exports[`Golden files — shipped example deals > wind_onshore.proviso evaluates identically 1`] = `
{
  "baskets": {
    "__error": "Undefined identifier: net_income",
  },
  "conditionsPrecedent": [
    {
      "complete": false,
      "conditions": [
        {
          "description": "Engineer's certificate of substantial completion",
          "name": "SubstantialCompletionCertificate",
          "responsible": "EngineeringConsultant",
          "satisfies": [
            "SubstantialCompletion",
          ],
          "status": "pending",
        },
        {
          "description": "Unconditional final lien waivers",
          "name": "FinalLienWaivers",
          "responsible": "GeneralContractor",
          "satisfies": [],
          "status": "pending",
        },
        {
          "description": "Successful completion of 30-day performance test",
          "name": "PerformanceTest",
          "responsible": "EngineeringConsultant",
          "satisfies": [
            "PerformanceTestPassed",
          ],
          "status": "pending",
        },
        {
          "description": "Operations phase insurance coverage",
          "name": "OperationsInsurance",
          "responsible": "Borrower",
          "satisfies": [
            "InsuranceTransition",
          ],
          "status": "pending",
        },
        {
          "description": "RTO confirmation of commercial operation",
          "name": "GridConnectionCertificate",
          "responsible": "SPP",
          "satisfies": [],
          "status": "pending",
        },
        {
          "description": "Tax equity capital contribution",
          "name": "TaxEquityFunding",
          "responsible": "TaxEquityInvestor",
          "satisfies": [],
          "status": "pending",
        },
        {
          "description": "Approved post-construction avian monitoring plan",
          "name": "AvianMonitoringPlan",
          "responsible": "Borrower",
          "satisfies": [],
          "status": "pending",
        },
      ],
      "name": "COD_Funding",
      "pending": 7,
      "satisfied": 0,
      "section": "4.03",
      "totalConditions": 7,
      "waived": 0,
    },
    {
      "complete": false,
      "conditions": [
        {
          "description": "Executed Credit Agreement and all Loan Documents",
          "name": "ExecutedCreditAgreement",
          "responsible": "Agent",
          "satisfies": [],
          "status": "pending",
        },
        {
          "description": "Binding commitment from Tax Equity Investor",
          "name": "TaxEquityCommitmentLetter",
          "responsible": "Sponsor",
          "satisfies": [
            "TaxEquityCommitment",
          ],
          "status": "pending",
        },
        {
          "description": "Opinions of Borrower's Counsel and Local Counsel",
          "name": "LegalOpinions",
          "responsible": "BorrowerCounsel",
          "satisfies": [],
          "status": "pending",
        },
        {
          "description": "Evidence of Initial Equity Contribution (25%)",
          "name": "EquityContribution",
          "responsible": "Sponsor",
          "satisfies": [
            "MinEquityContribution",
          ],
          "status": "pending",
        },
        {
          "description": "Builder's Risk, GL, and Umbrella Insurance",
          "name": "InsuranceCertificates",
          "responsible": "Borrower",
          "satisfies": [],
          "status": "pending",
        },
        {
          "description": "Executed TSA with OEM warranty",
          "name": "TurbineSupplyAgreement",
          "responsible": "Borrower",
          "satisfies": [],
          "status": "pending",
        },
        {
          "description": "Executed Power Purchase Agreement",
          "name": "PPA_Contract",
          "responsible": "Borrower",
          "satisfies": [
            "OffTakeExecuted",
          ],
          "status": "pending",
        },
        {
          "description": "Executed LGIA with transmission owner",
          "name": "InterconnectionAgreement",
          "responsible": "Borrower",
          "satisfies": [],
          "status": "pending",
        },
        {
          "description": "All FAA Determinations of No Hazard",
          "name": "FAA_Determinations",
          "responsible": "Borrower",
          "satisfies": [
            "FAA_Approved",
          ],
          "status": "pending",
        },
        {
          "description": "Section 106 consultation complete",
          "name": "TribalClearance",
          "responsible": "Borrower",
          "satisfies": [],
          "status": "pending",
        },
        {
          "description": "NEPA EA and Avian Protection Plan",
          "name": "EnvironmentalReport",
          "responsible": "Borrower",
          "satisfies": [
            "AllPermitsSecured",
          ],
          "status": "pending",
        },
      ],
      "name": "InitialFunding",
      "pending": 11,
      "satisfied": 0,
      "section": "4.01",
      "totalConditions": 11,
      "waived": 0,
    },
    {
      "complete": false,
      "conditions": [
        {
          "description": "Applicable milestone achieved per construction schedule",
          "name": "MilestoneAchievement",
          "responsible": "EngineeringConsultant",
          "satisfies": [],
          "status": "pending",
        },
        {
          "description": "Conditional lien waivers from all contractors",
          "name": "LienWaivers",
          "responsible": "GeneralContractor",
          "satisfies": [],
          "status": "pending",
        },
        {
          "description": "Date-down title endorsement",
          "name": "TitleEndorsement",
          "responsible": "TitleCompany",
          "satisfies": [],
          "status": "pending",
        },
        {
          "description": "Independent Engineer construction progress report",
          "name": "InspectionReport",
          "responsible": "EngineeringConsultant",
          "satisfies": [],
          "status": "pending",
        },
        {
          "description": "OEM certification of installed components",
          "name": "OEMCertification",
          "responsible": "TurbineSupplier",
          "satisfies": [],
          "status": "pending",
        },
      ],
      "name": "SubsequentDraws",
      "pending": 5,
      "satisfied": 0,
      "section": "4.02",
      "totalConditions": 5,
      "waived": 0,
    },
  ],
  "covenants": {
    "__error": "Undefined identifier: senior_debt",
  },
  "definitions": [
    {
      "name": "DSCR",
      "value": {
        "__error": "Undefined identifier: net_income",
      },
    },
    {
      "name": "DebtService",
      "value": {
        "__error": "Undefined identifier: senior_interest",
      },
    },
    {
      "name": "EBITDA",
      "value": {
        "__error": "Undefined identifier: net_income",
      },
    },
    {
      "name": "Leverage",
      "value": {
        "__error": "Undefined identifier: senior_debt",
      },
    },
    {
      "name": "NetEnergy",
      "value": {
        "__error": "Undefined identifier: gross_generation",
      },
    },
    {
      "name": "PTCRevenue",
      "value": {
        "__error": "Undefined identifier: gross_generation",
      },
    },
    {
      "name": "RevenuePerMWh",
      "value": {
        "__error": "Undefined identifier: ppa_revenue",
      },
    },
    {
      "name": "SeniorDebt",
      "value": {
        "__error": "Undefined identifier: senior_debt",
      },
    },
    {
      "name": "TotalDebt",
      "value": {
        "__error": "Undefined identifier: senior_debt",
      },
    },
  ],
  "performanceGuarantees": [
    {
      "actual": 440,
      "guaranteePeriod": "10 years",
      "meetsGuarantee": true,
      "metric": "annual_gwh",
      "name": "AnnualEnergyProduction",
      "p50": 485,
      "p75": 455,
      "p90": 420,
      "p99": 380,
      "performanceLevel": "p90",
      "shortfall": 0,
      "shortfallPayment": 0,
    },
    {
      "actual": 95.2,
      "guaranteePeriod": "25 years",
      "meetsGuarantee": true,
      "metric": "availability_pct",
      "name": "Availability",
      "p50": 97,
      "p75": 96,
      "p90": 94.5,
      "p99": 92,
      "performanceLevel": "p90",
      "shortfall": 0,
      "shortfallPayment": 0,
    },
    {
      "actual": 4.2,
      "guaranteePeriod": null,
      "meetsGuarantee": true,
      "metric": "curtailment_pct",
      "name": "CurtailmentLimit",
      "p50": 3,
      "p75": 4.5,
      "p90": 6,
      "p99": 8,
      "performanceLevel": "p50",
      "shortfall": 3.8,
      "shortfallPayment": 0,
    },
    {
      "actual": 33.5,
      "guaranteePeriod": "10 years",
      "meetsGuarantee": true,
      "metric": "net_capacity_factor_pct",
      "name": "NetCapacityFactor",
      "p50": 37,
      "p75": 34.6,
      "p90": 32,
      "p99": 29,
      "performanceLevel": "p90",
      "shortfall": 0,
      "shortfallPayment": 0,
    },
  ],
  "phase": {
    "active": [
      "AvailabilityMinimum",
      "CurtailmentMaximum",
      "MinDSCR",
      "MinEquityContribution",
      "ProductionMinimum",
    ],
    "current": "Development",
    "required": [],
    "suspended": [
      "InterestCoverage",
      "SeniorDSCR",
      "TotalLeverage",
    ],
    "transitions": [
      {
        "conditions": [
          {
            "met": false,
            "name": "AllPermitsSecured",
          },
          {
            "met": false,
            "name": "OffTakeExecuted",
          },
          {
            "met": true,
            "name": "InterconnectionApproved",
          },
          {
            "met": true,
            "name": "TaxEquityCommitment",
          },
          {
            "met": true,
            "name": "FAA_Approved",
          },
        ],
        "name": "NTP_Achieved",
        "targetPhase": "Construction",
        "triggered": false,
      },
      {
        "conditions": [
          {
            "met": false,
            "name": "SubstantialCompletion",
          },
          {
            "met": false,
            "name": "GridSynchronization",
          },
          {
            "met": false,
            "name": "PerformanceTestPassed",
          },
          {
            "met": false,
            "name": "InsuranceTransition",
          },
          {
            "met": true,
            "name": "AvianCompliance",
          },
        ],
        "name": "COD_Achieved",
        "targetPhase": "Operations",
        "triggered": false,
      },
    ],
  },
  "regulatoryRequirements": [
    {
      "agency": "USFWS",
      "approvalDate": "2024-11-10",
      "blocking": false,
      "description": null,
      "name": "AvianProtection",
      "requiredFor": "Operations",
      "requirementType": "Avian and Bat Protection Plan",
      "satisfies": [
        "AvianCompliance",
      ],
      "status": "approved",
    },
    {
      "agency": "County Planning",
      "approvalDate": "2024-07-15",
      "blocking": false,
      "description": null,
      "name": "CUP_Permit",
      "requiredFor": "Development",
      "requirementType": "Conditional Use Permit",
      "satisfies": [],
      "status": "approved",
    },
    {
      "agency": "County",
      "approvalDate": null,
      "blocking": true,
      "description": null,
      "name": "DecommissioningBond",
      "requiredFor": "Operations",
      "requirementType": "Decommissioning Surety Bond",
      "satisfies": [],
      "status": "pending",
    },
    {
      "agency": "FAA",
      "approvalDate": "2024-06-20",
      "blocking": false,
      "description": null,
      "name": "FAA_Determination",
      "requiredFor": "Development",
      "requirementType": "Determination of No Hazard",
      "satisfies": [
        "FAA_Approved",
      ],
      "status": "approved",
    },
    {
      "agency": "FAA",
      "approvalDate": "2024-08-15",
      "blocking": false,
      "description": null,
      "name": "FAA_ObstructionLighting",
      "requiredFor": "Construction",
      "requirementType": "Obstruction Lighting Plan",
      "satisfies": [],
      "status": "approved",
    },
    {
      "agency": "SPP",
      "approvalDate": "2024-12-01",
      "blocking": false,
      "description": null,
      "name": "LGIA_Interconnection",
      "requiredFor": "Development",
      "requirementType": "Large Generator Interconnection Agreement",
      "satisfies": [
        "InterconnectionApproved",
      ],
      "status": "approved",
    },
    {
      "agency": "USFWS",
      "approvalDate": "2024-05-22",
      "blocking": false,
      "description": null,
      "name": "NEPA_EA",
      "requiredFor": "Development",
      "requirementType": "Environmental Assessment",
      "satisfies": [],
      "status": "approved",
    },
    {
      "agency": "State EPA",
      "approvalDate": "2024-10-05",
      "blocking": false,
      "description": null,
      "name": "NoiseCompliance",
      "requiredFor": "Operations",
      "requirementType": "Noise Variance Permit",
      "satisfies": [],
      "status": "approved",
    },
    {
      "agency": "NERC",
      "approvalDate": null,
      "blocking": true,
      "description": null,
      "name": "SCADA_Compliance",
      "requiredFor": "Operations",
      "requirementType": "CIP Compliance Certification",
      "satisfies": [],
      "status": "pending",
    },
    {
      "agency": "BIA",
      "approvalDate": "2024-09-30",
      "blocking": false,
      "description": null,
      "name": "TribalConsultation",
      "requiredFor": "Development",
      "requirementType": "Section 106 Consultation",
      "satisfies": [],
      "status": "approved",
    },
  ],
  "reserves": {
    "__error": "Undefined identifier: monthly_debt_service",
  },
  "seasonalAdjustments": [
    {
      "active": false,
      "adjustedValue": 0,
      "adjustmentFactor": 0.95,
      "baseValue": 0,
      "metric": "energy_production",
      "name": "SpringTransition",
      "reason": "Moderate wind, maintenance windows",
      "seasons": [
        "Q2",
      ],
    },
    {
      "active": false,
      "adjustedValue": 0,
      "adjustmentFactor": 0.65,
      "baseValue": 0,
      "metric": "energy_production",
      "name": "SummerLow",
      "reason": "Lower wind speeds, higher curtailment",
      "seasons": [
        "Q3",
      ],
    },
    {
      "active": false,
      "adjustedValue": 0,
      "adjustmentFactor": 1.35,
      "baseValue": 0,
      "metric": "energy_production",
      "name": "WinterPeak",
      "reason": "Higher wind speeds in winter months",
      "seasons": [
        "Q1",
        "Q4",
      ],
    },
  ],
  "technicalMilestones": [
    {
      "achievedDate": undefined,
      "completionPercent": 100,
      "currentValue": 28,
      "daysToLongstop": -566,
      "daysToTarget": -627,
      "longstopDate": "2027-06-15",
      "measurement": "miles of roads",
      "name": "AccessRoadsComplete",
      "prerequisites": [],
      "progressMetric": null,
      "status": "achieved",
      "targetDate": "2027-04-15",
      "targetValue": 28,
    },
    {
      "achievedDate": undefined,
      "completionPercent": 44,
      "currentValue": 22,
      "daysToLongstop": -246,
      "daysToTarget": -336,
      "longstopDate": "2028-04-30",
      "measurement": "rotor sets complete",
      "name": "BladeInstallation",
      "prerequisites": [
        {
          "met": false,
          "name": "NacelleInstallation",
        },
      ],
      "progressMetric": null,
      "status": "breached",
      "targetDate": "2028-01-31",
      "targetValue": 50,
    },
    {
      "achievedDate": undefined,
      "completionPercent": 80,
      "currentValue": 4,
      "daysToLongstop": -215,
      "daysToTarget": -308,
      "longstopDate": "2028-05-31",
      "measurement": "collector circuits",
      "name": "CollectorSystemComplete",
      "prerequisites": [
        {
          "met": false,
          "name": "FoundationsPoured",
        },
      ],
      "progressMetric": null,
      "status": "breached",
      "targetDate": "2028-02-28",
      "targetValue": 5,
    },
    {
      "achievedDate": undefined,
      "completionPercent": 84,
      "currentValue": 42,
      "daysToLongstop": -459,
      "daysToTarget": -551,
      "longstopDate": "2027-09-30",
      "measurement": "foundations complete",
      "name": "FoundationsPoured",
      "prerequisites": [
        {
          "met": true,
          "name": "AccessRoadsComplete",
        },
      ],
      "progressMetric": null,
      "status": "breached",
      "targetDate": "2027-06-30",
      "targetValue": 50,
    },
    {
      "achievedDate": undefined,
      "completionPercent": 0,
      "currentValue": 0,
      "daysToLongstop": -184,
      "daysToTarget": -275,
      "longstopDate": "2028-07-01",
      "measurement": "grid sync",
      "name": "GridSynchronization",
      "prerequisites": [
        {
          "met": false,
          "name": "BladeInstallation",
        },
        {
          "met": false,
          "name": "SubstationComplete",
        },
      ],
      "progressMetric": null,
      "status": "breached",
      "targetDate": "2028-04-01",
      "targetValue": 1,
    },
    {
      "achievedDate": undefined,
      "completionPercent": 56.00000000000001,
      "currentValue": 28,
      "daysToLongstop": -308,
      "daysToTarget": -398,
      "longstopDate": "2028-02-28",
      "measurement": "nacelles installed",
      "name": "NacelleInstallation",
      "prerequisites": [
        {
          "met": false,
          "name": "TowerErection",
        },
      ],
      "progressMetric": null,
      "status": "breached",
      "targetDate": "2027-11-30",
      "targetValue": 50,
    },
    {
      "achievedDate": undefined,
      "completionPercent": 68,
      "currentValue": null,
      "daysToLongstop": -154,
      "daysToTarget": -246,
      "longstopDate": "2028-07-31",
      "measurement": null,
      "name": "SubstantialCompletion",
      "prerequisites": [
        {
          "met": false,
          "name": "BladeInstallation",
        },
        {
          "met": false,
          "name": "CollectorSystemComplete",
        },
        {
          "met": false,
          "name": "SubstationComplete",
        },
      ],
      "progressMetric": 0.68,
      "status": "breached",
      "targetDate": "2028-04-30",
      "targetValue": null,
    },
    {
      "achievedDate": undefined,
      "completionPercent": 90,
      "currentValue": 90,
      "daysToLongstop": -200,
      "daysToTarget": -292,
      "longstopDate": "2028-06-15",
      "measurement": "substation percent",
      "name": "SubstationComplete",
      "prerequisites": [
        {
          "met": false,
          "name": "CollectorSystemComplete",
        },
      ],
      "progressMetric": null,
      "status": "breached",
      "targetDate": "2028-03-15",
      "targetValue": 100,
    },
    {
      "achievedDate": undefined,
      "completionPercent": 70,
      "currentValue": 35,
      "daysToLongstop": -367,
      "daysToTarget": -459,
      "longstopDate": "2027-12-31",
      "measurement": "towers erected",
      "name": "TowerErection",
      "prerequisites": [
        {
          "met": false,
          "name": "FoundationsPoured",
        },
      ],
      "progressMetric": null,
      "status": "breached",
      "targetDate": "2027-09-30",
      "targetValue": 50,
    },
  ],
}
`;
